--- a/index.html
+++ b/index.html
@@ -1,78 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
   <base href="/">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
+
+  <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="penkit_pro">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
+
   <title>penkit_pro</title>
   <link rel="manifest" href="manifest.json">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-    #loading {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: #000000;
-      z-index: 9999;
-    }
-    .loading-text {
-      color: white;
-      font-size: 20px;
-      font-family: Arial, sans-serif;
-      margin-bottom: 10px;
-    }
-    .loading-percentage {
-      color: white;
-      font-size: 16px;
-      font-family: Arial, sans-serif;
-    }
-  </style>
 </head>
 <body>
-  <div id="loading">
-    <div class="loading-text">Loading...</div>
-    <div class="loading-percentage" id="percentage">0%</div>
-  </div>
-
-  <script>
-    let progress = 0;
-    const loadingElement = document.getElementById('loading');
-    const percentageElement = document.getElementById('percentage');
-
-    const interval = setInterval(() => {
-      if (progress < 100) {
-        progress += 10; // Increment progress
-        percentageElement.textContent = `${progress}%`; // Update percentage text
-      } else {
-        clearInterval(interval); // Stop the interval when complete
-      }
-    }, 100); // Update every 100ms
-
-    window.addEventListener('load', function() {
-      // Wait a bit before removing the loading screen
-      setTimeout(function() {
-        loadingElement.style.opacity = '0';
-        loadingElement.style.transition = 'opacity 0.5s ease';
-        setTimeout(() => loadingElement.remove(), 500);
-      }, 1000);
-    });
-  </script>
-
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
